Enable parallel test execution and update Gradle version
Enabled parallel test execution in JUnit Jupiter by uncommenting the necessary properties in 'junit-platform.properties'. This aims to speed up our tests by running them concurrently where possible. Additionally, the Gradle version used in the project has been updated to 8.8 to take advantage of the latest features and improvements. The code formatting and cleaning have also been performed for better readability and maintainability.